tests/snapshots/examples_fixtures/errors__invalid_pattern_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/invalid_pattern_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/errors/invalid_pattern_error.flx:6:1
  |
6 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


Warning: Invalid Flux IR

IR uses a variable before it is defined

Found 2 errors and 1 warning.
== stdout ==
<not executed>
